markdown/ai/2.0.0/api/bedrock.md
---
title: "Amazon Bedrock"
source: "ROOT:api/bedrock.adoc"
---

# Amazon Bedrock

> [!NOTE]
> Following the Bedrock recommendations, Spring AI transitioned to using Amazon Bedrock’s Converse API for all Chat conversation implementations in Spring AI.
> The [Bedrock Converse API](chat/bedrock-converse.md) has the following key benefits:
>
> - Unified Interface: Write your code once and use it with any supported Amazon Bedrock model
> - Model Flexibility: Seamlessly switch between different conversation models without code changes
> - Extended Functionality: Support for model-specific parameters through dedicated structures
> - Tool Support: Native integration with function calling and tool usage capabilities
> - Multimodal Capabilities: Built-in support for vision and other multimodal features
> - Future-Proof: Aligned with Amazon Bedrock’s recommended best practices
>
> The Converse API does not support embedding operations, so these will remain in the current API and the embedding model functionality in the existing `InvokeModel API` will be maintained

[Amazon Bedrock](https://docs.aws.amazon.com/bedrock/latest/userguide/what-is-bedrock.html) is a managed service that provides foundation models from various AI providers, available through a unified API.

Spring AI supports [the Embedding AI models](https://docs.aws.amazon.com/bedrock/latest/userguide/model-ids-arns.html) available through Amazon Bedrock by implementing the Spring `EmbeddingModel` interface.

Additionally, Spring AI provides Spring Auto-Configurations and Boot Starters for all clients, making it easy to bootstrap and configure for the Bedrock models.

<a id="_getting_started"></a>

## Getting Started

There are a few steps to get started

- Add the Spring Boot starter for Bedrock to your project.
- Obtain AWS credentials: If you don’t have an AWS account and AWS CLI configured yet, this video guide can help you configure it: [AWS CLI & SDK Setup in Less Than 4 Minutes!](https://youtu.be/gswVHTrRX8I?si=buaY7aeI0l3-bBVb). You should be able to obtain your access and security keys.
- Enable the Models to use: Go to [Amazon Bedrock](https://us-east-1.console.aws.amazon.com/bedrock/home) and from the [Model Access](https://us-east-1.console.aws.amazon.com/bedrock/home?region=us-east-1#/modelaccess) menu on the left, configure access to the models you are going to use.

<a id="_project_dependencies"></a>

### Project Dependencies

Then add the Spring Boot Starter dependency to your project’s Maven `pom.xml` build file:

```xml
<dependency>
 <artifactId>spring-ai-starter-model-bedrock</artifactId>
 <groupId>org.springframework.ai</groupId>
</dependency>
```

or to your Gradle `build.gradle` build file.

```groovy
dependencies {
    implementation 'org.springframework.ai:spring-ai-starter-model-bedrock'
}
```

> [!TIP]
> Refer to the [Dependency Management](../getting-started.md#dependency-management) section to add the Spring AI BOM to your build file.

<a id="_connect_to_aws_bedrock"></a>

### Connect to AWS Bedrock

Use the `BedrockAwsConnectionProperties` to configure AWS credentials and region:

```shell
spring.ai.bedrock.aws.region=us-east-1

spring.ai.bedrock.aws.access-key=YOUR_ACCESS_KEY
spring.ai.bedrock.aws.secret-key=YOUR_SECRET_KEY

spring.ai.bedrock.aws.profile.name=YOUR_PROFILE_NAME
spring.ai.bedrock.aws.profile.credentials-path=YOUR_CREDENTIALS_PATH
spring.ai.bedrock.aws.profile.configuration-path=YOUR_CONFIGURATION_PATH

spring.ai.bedrock.aws.timeout=10m
```

The `region` property is compulsory.

AWS credentials are resolved in the following order:

1. Spring-AI Bedrock `spring.ai.bedrock.aws.access-key` and `spring.ai.bedrock.aws.secret-key` properties.
1. Spring-AI Bedrock `spring.ai.bedrock.aws.profile.name`, If `spring.ai.bedrock.aws.profile.credentials-path` and `spring.ai.bedrock.aws.profile.configuration-path` are not specified, Spring AI use the standard AWS shared files: `~/.aws/credentials` for credentials and `~/.aws/config` for configuration.
1. Java System Properties - `aws.accessKeyId` and `aws.secretAccessKey`.
1. Environment Variables - `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`.
1. Web Identity Token credentials from system properties or environment variables.
1. Credential profiles file at the default location (`~/.aws/credentials`) shared by all AWS SDKs and the AWS CLI.
1. Credentials delivered through the Amazon EC2 container service if the `AWS_CONTAINER_CREDENTIALS_RELATIVE_URI` environment variable is set and the security manager has permission to access the variable.
1. Instance profile credentials delivered through the Amazon EC2 metadata service or set the `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY` environment variables.

AWS region is resolved in the following order:

1. Spring-AI Bedrock `spring.ai.bedrock.aws.region` property.
1. Java System Properties - `aws.region`.
1. Environment Variables - `AWS_REGION`.
1. Credential profiles file at the default location (`~/.aws/credentials`) shared by all AWS SDKs and the AWS CLI.
1. Instance profile region delivered through the Amazon EC2 metadata service.

In addition to the standard Spring-AI Bedrock credentials and region properties configuration, Spring-AI provides support for custom `AwsCredentialsProvider` and `AwsRegionProvider` beans.

> [!NOTE]
> For example, using Spring-AI and [Spring Cloud for Amazon Web Services](https://spring.io/projects/spring-cloud-aws) at the same time. Spring-AI is compatible with Spring Cloud for Amazon Web Services credential configuration.

<a id="_enable_selected_bedrock_model"></a>

### Enable selected Bedrock model

> [!NOTE]
> By default, all models are disabled. You have to enable the chosen Bedrock models explicitly using the `spring.ai.model.embedding=<model-name>` property.

Here are the supported `<model-name>`s:

|  |
| --- |
| Model |
| bedrock-cohere |
| bedrock-titan (no batch support yet) |

For example, to enable the Bedrock Cohere embedding model, you need to set `spring.ai.model.embedding=bedrock-cohere`.

Next, you can use the `spring.ai.bedrock.<model>.embedding.*` properties to configure each model as provided.

For more information, refer to the documentation below for each supported model.

- [Spring AI Bedrock Cohere Embeddings](embeddings/bedrock-cohere-embedding.md): `spring.ai.model.embedding=bedrock-cohere`
- [Spring AI Bedrock Titan Embeddings](embeddings/bedrock-titan-embedding.md): `spring.ai.model.embedding=bedrock-titan`
